--- a/templates/mydashboard.mustache
+++ b/templates/mydashboard.mustache
@@ -64,7 +64,9 @@
 {{> core/local/toast/wrapper}}
 <div id="page-wrapper">
 
+    <!-- O.standard_top_of_body_html -->
     {{{ output.standard_top_of_body_html }}}
+    <!-- /O.standard_top_of_body_html -->
 
     {{#output.headertoplocation}}
         {{{ output.headerimage }}}
