--- a/style/dropdown.css
+++ b/style/dropdown.css
@@ -1,3 +1,8 @@
+
+nav .dropdown.nav-item {
+    list-style-type: none;
+}
+
 .moodle-actionmenu[data-enhanced].show .menu,
 .dropdown-menu {
     border-radius: 0;
