--- a/templates/navbar.mustache
+++ b/templates/navbar.mustache
@@ -73,7 +73,7 @@
 
     {{^custommenupullright}}
     <!-- custom menu needs to get out of right part of navbar -->
-    <div class="not-pulled-right">
+    <div class="not-pulled-right d-flex">
     <!-- klassplace:core_renderer:klassplace_custom_menu() -->
     {{{ output.klassplace_custom_menu }}}
     <!-- core_renderer:custom_menu() -->
@@ -98,7 +98,7 @@
 
         <!-- lang -->
         {{#showlangmenu}}
-        <li class="nav-item d-flex align-items-center">
+        <li id="navbar-lang-menu" class="nav-item d-flex align-items-center">
             <div class="d-none d-lg-block lang">
             <!-- lang_menu() -->
             {{{ output.lang_menu }}}
@@ -173,7 +173,7 @@
     <ul class="nav navbar-nav ml-auto align-items-center">
         <!-- lang -->
         {{#showlangmenu}}
-        <li class="nav-item d-flex align-items-center lang-menu">
+        <li id="navbar-lang-menu" class="nav-item d-flex align-items-center lang-menu">
             <div class="d-none d-lg-block lang">
             <!-- lang_menu() -->
             {{{ output.lang_menu }}}
