--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -80,7 +80,7 @@ body.mediumwidth #page.drawers .main-inner {
 #page-site-index.site-layout-1,
 #page-site-index.site-layout-2 {
     #page {
-        margin-top: 0;
+        margin-top: $navbar-height;
     }
 }
 
