--- a/scss/activityicons.scss
+++ b/scss/activityicons.scss
@@ -1,5 +1,67 @@
 
+img.activityicon {
+    width: $activityiconsize;
+    height: $activityiconsize;
+}
+
+.activityiconcontainer {
+    width: $activityiconsize;
+    height: $activityiconsize;
+    max-width: $activityiconsize;
+    max-height: $activityiconsize;
+    padding: 8px;
+
+    img.activityicon {
+        width: $activityiconsize;
+        height: $activityiconsize;
+        max-width: $activityiconsize;
+        max-height: $activityiconsize;
+    }
+}
+
+.activityiconcontainer.small {
+    width: $activityiconsize;
+    height: $activityiconsize;
+    max-width: $activityiconsize;
+    max-height: $activityiconsize;
+    padding: 8px;
+
+    img.activityicon {
+        width: $activityiconsize;
+        height: $activityiconsize;
+        max-width: $activityiconsize;
+        max-height: $activityiconsize;
+    }
+}
+
+.activityiconcontainer.smaller {
+    width: $activityiconsize;
+    height: $activityiconsize;
+    max-width: $activityiconsize;
+    max-height: $activityiconsize;
+    padding:8px;
+
+    img.activityicon {
+        width: $activityiconsize;
+        height: $activityiconsize;
+        max-width: $activityiconsize;
+        max-height: $activityiconsize;
+    }
+}
+
 @if $monochrome == 1 {
+
+    .activityiconcontainer {
+        background-color: $brandprimary;
+        color: $brandprimaryalt;
+        width: 50px;
+        height: 50px;
+        padding: 0.7rem;
+    }
+
+    .activityiconcontainer.smaller .activityicon {
+        filter: invert(100%) brightness(100) !important;
+    }
 
     .activityiconcontainer.content {
         background-color: $brandprimary;
