--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -121,14 +121,20 @@ a:not([class]):focus,
 
 .btn:hover, .btn:focus, .btn:active {
     background-color: $brandsecondary;
+    color: $brandsecondaryalt;
 }
 
 .section-modchooser-link.btn.btn-link {
     background-color: $brandprimary;
+    color: $brandsecondaryalt;
 }
 
 .btn-success {
     background-color: $brandsuccess;
+}
+
+.moodle-dialogue-base .closebutton::before {
+    font-weight: bold; // find the appropriate glyphs
 }
 
 span.section-modchooser-link
