--- a/scss/klassplace_variables.scss
+++ b/scss/klassplace_variables.scss
@@ -89,6 +89,7 @@ $teachernavbarcolor:                $topnavbar-bg !default;
 $topnavbar-bg-hov:                  #ffffff !default;
 $topnavbarteacher-bg:               #f3e420 !default;
 $studentnavbarcolor:                $topnavbar-bg !default;
+$coursenavbar-hide:                 0 !default;
 $navbar-fhs-color:                  $black !default;
 $navbar-fhs-active-color:           $black !default;
 $navbar-fhs-hover-color:            $black !default;
