--- a/scss/sectionlayout/sectionstyle2.scss
+++ b/scss/sectionlayout/sectionstyle2.scss
@@ -187,11 +187,13 @@ body.section-layout-2 {
         background-color: $activityhover;
     }
 
+    /*
     .course-content img.activityicon {
         height: $activityiconsize;
         width: $activityiconsize;
         vertical-align: middle !important;
     }
+    */
 
     span.instancename {
         margin-left: 1rem;
