--- a/templates/flat_navigation.mustache
+++ b/templates/flat_navigation.mustache
@@ -74,7 +74,7 @@
                                     {{#pix}}{{{icon.pix}}}, {{{icon.component}}}, {{{icon.alt}}}{{/pix}}
                                 </span>
                             {{/icon.pix}}
-                            <span class="media-body {{#isactive}}font-weight-bold{{/isactive}}">{{{text}}}</span>
+                            <span class="{{#isactive}}font-weight-bold{{/isactive}}">{{{text}}}</span>
                         </div>
                     </div>
                 </a>
@@ -90,7 +90,7 @@
                                     {{#pix}}{{{icon.pix}}}, {{{icon.component}}}, {{{icon.alt}}}{{/pix}}
                                 </span>
                             {{/icon.pix}}
-                            <span class="media-body">{{{text}}}</span>
+                            <span class="">{{{text}}}</span>
                         </div>
                     </div>
                 </div>
