--- a/templates/mydashboard.mustache
+++ b/templates/mydashboard.mustache
@@ -176,6 +176,10 @@
     <!-- /klassplace:nav-drawer -->
     {{/hasnavdrawer}}
 
+    {{#hasmobilenav}}
+    {{> theme_klassplace/mobile-nav-drawer }}
+    {{/hasmobilenav}}
+
 </div>
 
 {{> theme_klassplace/footer }}
