--- a/scss/tabs.scss
+++ b/scss/tabs.scss
@@ -26,9 +26,10 @@
 /* in more menus */
 
 .moremenu .nav-link.active:focus,
-.moremenu .nav-link.active:hover {
+.moremenu .nav-link.active:hover,
+.moremenu .nav-link:hover {
     background-color: $brandsecondary !important;
-    color: $brandsecondaryalt;
+    color: $brandsecondaryalt !important;
     transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-
 }
 
