--- a/templates/columns1.mustache
+++ b/templates/columns1.mustache
@@ -57,7 +57,6 @@
 <!-- boost:head -->
 
 <body {{{ bodyattributes }}}>
-{{{technicalsignals}}}
 
 <!-- accessibility add-ons -->
 <style>
@@ -114,6 +113,10 @@
     </div>
 
     {{{ output.standard_after_main_region_html }}}
+
+    {{#hasmobilenav}}
+    {{> theme_klassplace/mobile-nav-drawer }}
+    {{/hasmobilenav}}
 
 </div>
 
