--- a/templates/local_my/my_courses_module.mustache
+++ b/templates/local_my/my_courses_module.mustache
@@ -53,6 +53,7 @@
 
     <div id="area-courses-{{uid}}">
 {{/ajax}}
+        <!-- coursearea-content -->
         {{^hascourses}}
         <div class="content" id="content-{{uid}}">
             {{{nocourses}}}
@@ -108,6 +109,7 @@
         {{/asslider}}
 
         {{/hascourses}}
+        <!-- /coursearea-content -->
 {{^ajax}}
     </div>
 </div>
