--- a/scss/quiz.scss
+++ b/scss/quiz.scss
@@ -22,7 +22,7 @@
     border-radius: $border-big-radius;
     -webkit-border-radius: $border-big-radius;
     -moz-border-radius: $border-big-radius;
-    color: $brandprimaryalt;
+    color: $brandprimary;
 }
 
 /* titre moyens */
