--- a/scss/preset/Default.scss
+++ b/scss/preset/Default.scss
@@ -39,7 +39,8 @@ $dark:          $gray-800 !default;
 $enable-rounded: false !default;
 
 // Body
-$body-color:    $gray-800 !default;
+// $body-color:    $gray-800 !default;
+$body-color:    $black !default;
 $body-bg:       #dae6e5 !default;
 $drawer-bg:     rgba(235, 251, 255, 0.8) !default;
 $card-bg:       $white !default;
